tests/snapshots/integration__integration_tests__list__json_with_user_status.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--format=json"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
[
  {
    "head_sha": "f0879504ee3d7dc97723a75c22712f27b604be74",
    "branch": "main",
    "timestamp": 0,
    "commit_message": "Initial commit",
    "ahead": 0,
    "behind": 0,
    "branch_diff": {
      "added": 0,
      "deleted": 0
    },
    "upstream_remote": null,
    "upstream_ahead": 0,
    "upstream_behind": 0,
    "pr_status": null,
    "status": {
      "working_tree": {
        "untracked": false,
        "modified": false,
        "staged": false,
        "renamed": false,
        "deleted": false
      },
      "branch_op_state": "",
      "main_divergence": "IsMain",
      "upstream_divergence": "",
      "worktree_state": ""
    },
    "status_symbols": {
      "working_tree": "",
      "branch_op_state": "",
      "main_divergence": "^",
      "upstream_divergence": "",
      "worktree_state": ""
    },
    "status_line": "main",
    "type": "worktree",
    "path": "[REPO]",
    "bare": false,
    "detached": false,
    "working_tree_diff": {
      "added": 0,
      "deleted": 0
    },
    "working_tree_diff_with_main": {
      "added": 0,
      "deleted": 0
    },
    "worktree_state": null,
    "is_main": true,
    "is_current": true
  },
  {
    "head_sha": "f0879504ee3d7dc97723a75c22712f27b604be74",
    "branch": "with-status",
    "timestamp": 0,
    "commit_message": "Initial commit",
    "ahead": 0,
    "behind": 0,
    "branch_diff": {
      "added": 0,
      "deleted": 0
    },
    "upstream_remote": null,
    "upstream_ahead": 0,
    "upstream_behind": 0,
    "pr_status": null,
    "status": {
      "working_tree": {
        "untracked": false,
        "modified": false,
        "staged": false,
        "renamed": false,
        "deleted": false
      },
      "branch_op_state": "NoCommits",
      "main_divergence": "",
      "upstream_divergence": "",
      "worktree_state": "",
      "user_status": "🔧"
    },
    "status_symbols": {
      "working_tree": "",
      "branch_op_state": "_",
      "main_divergence": "",
      "upstream_divergence": "",
      "worktree_state": "",
      "user_status": "🔧"
    },
    "status_line": "with-status  /u001b[2m_/u001b[0m🔧",
    "type": "worktree",
    "path": "[REPO].with-status",
    "bare": false,
    "detached": false,
    "working_tree_diff": {
      "added": 0,
      "deleted": 0
    },
    "working_tree_diff_with_main": {
      "added": 0,
      "deleted": 0
    },
    "worktree_state": null,
    "is_main": false
  },
  {
    "head_sha": "f0879504ee3d7dc97723a75c22712f27b604be74",
    "branch": "without-status",
    "timestamp": 0,
    "commit_message": "Initial commit",
    "ahead": 0,
    "behind": 0,
    "branch_diff": {
      "added": 0,
      "deleted": 0
    },
    "upstream_remote": null,
    "upstream_ahead": 0,
    "upstream_behind": 0,
    "pr_status": null,
    "status": {
      "working_tree": {
        "untracked": false,
        "modified": false,
        "staged": false,
        "renamed": false,
        "deleted": false
      },
      "branch_op_state": "NoCommits",
      "main_divergence": "",
      "upstream_divergence": "",
      "worktree_state": ""
    },
    "status_symbols": {
      "working_tree": "",
      "branch_op_state": "_",
      "main_divergence": "",
      "upstream_divergence": "",
      "worktree_state": ""
    },
    "status_line": "without-status  /u001b[2m_/u001b[0m",
    "type": "worktree",
    "path": "[REPO].without-status",
    "bare": false,
    "detached": false,
    "working_tree_diff": {
      "added": 0,
      "deleted": 0
    },
    "working_tree_diff_with_main": {
      "added": 0,
      "deleted": 0
    },
    "worktree_state": null,
    "is_main": false
  }
]

----- stderr -----
